
- #2321: Eliminate dead ICatch handlers
  (Greta Yorsh, review by Pierre Chambart and Vincent Laviron)

- #8919: lift mutable lets along with immutable ones
  (Leo White, review by Pierre Chambart)

- #8806: Add an [@@immediate64] attribute for types that are known to
  be immediate only on 64 bit platforms
  (Jérémie Dimino, review by Vladimir Keleshev)

### Runtime system:

- #8619: Ensure Gc.minor_words remains accurate after a GC.
  (Stephen Dolan, Xavier Leroy and David Allsopp,
   review by Xavier Leroy and Gabriel Scherer)

* #8711: The major GC hooks are no longer allowed to interact with the
   OCaml heap.
   (Jacques-Henri Jourdan, review by Damien Doligez)

- #8691, #8897: Allocation functions are now guaranteed not to trigger any
   OCaml callback when called from C.
   (Jacques-Henri Jourdan, review by Stephen Dolan and Gabriel Scherer)

- #8630: Use abort() instead of exit(2) in caml_fatal_error, and add
  the new hook caml_fatal_error_hook.
  (Jacques-Henri Jourdan, review by Xavier Leroy)

- #8713: Introduce a state table in the runtime to contain the global variables
   which must be duplicated for each domain in the multicore runtime.
   (KC Sivaramakrishnan and Stephen Dolan, compatibility header hacking by
    David Allsopp, review by David Allsopp, Alain Frisch, Nicolas Ojeda Bar,
    Gabriel Scherer and Damien Doligez)

### Tools:

* #6792, #8654 ocamldebug now supports program using Dynlink. This
   breaks compatibility with emacs modes.
   (Whitequark and Jacques-Henri Jourdan, review by Gabriel Scherer
    and Xavier Clerc)

* #8834, `ocaml`: adhere to the XDG base directory specification to
  locate an `.ocamlinit` file. Reads an `$XDG_CONFIG_HOME/ocaml/init.ml`
  file before trying to lookup `~/.ocamlinit`. On Windows the behaviour
  is unchanged.
  (Daniel C. Bünzli, review by David Allsopp, Armaël Guéneau and
   Nicolás Ojeda Bär)

### Standard library:

- #8832: List.find_map : ('a -> 'b option) -> 'a list -> 'b option